@@ -1,7 +1,7 @@
 #  File src/library/utils/R/windows/download.file.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2021 The R Core Team
+#  Copyright (C) 1995-2023 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,11 +22,10 @@ download.file <-
              headers = NULL, ...)
 {
     destfile # check supplied
-    method <- if (missing(method))
-	getOption("download.file.method", default = "auto")
-    else
-        match.arg(method, c("auto", "internal", "wininet", "libcurl",
-                            "wget", "curl", "lynx"))
+    if (missing(method))
+	method <- getOption("download.file.method", default = "auto")
+    method <- match.arg(method, c("auto", "internal", "wininet",
+                                  "libcurl", "wget", "curl", "lynx"))
 
     if(missing(mode) && length(grep("\\.(gz|bz2|xz|tgz|zip|jar|rd[as]|RData)$",
 				    URLdecode(url))))
@@ -80,7 +79,9 @@ download.file <-
                if(status) stop("'curl' call had nonzero exit status")
 	   },
 	   "lynx" =
-	       stop("method 'lynx' is defunct", domain = NA))
+	       stop("method 'lynx' is defunct", domain = NA),
+           ## otherwise {should never happen}
+           stop("invalid method: ", method))
 
     if(status > 0L)
         warning("download had nonzero exit status")
